Fix search page banner background colors overflows

--- a/public/themes/custom/julkaisut/assets/styles/partials/site.scss
+++ b/public/themes/custom/julkaisut/assets/styles/partials/site.scss
@@ -20,6 +20,20 @@
   margin-left: auto;
   margin-right: auto;
   z-index: 100;
+  position: relative;
+
+  &::before {
+    display: block;
+    content: '';
+    margin-left: -50vw;
+    width: 200vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    background-color: var(--color-white);
+    z-index: -1;
+  }
 
   &.is-active {
     height: var(--app-height, 100vh);
